--- a/styles/main.css
+++ b/styles/main.css
@@ -84,6 +84,7 @@
   height: 0;
   overflow: hidden;
   z-index: 5;
+  background: white;
 }
 
 .bottom_side .result.active {
@@ -108,6 +109,7 @@
           align-items: center;
   height: 0;
   overflow: hidden;
+  background: white;
 }
 
 .bottom_side .winner_holder.active {
