--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+body.active {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1140px;
 }
@@ -97,6 +101,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: fixed;
+  left: 0;
+  top: 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
