--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,9 @@
+body{
+    &.active{
+        overflow: hidden;
+    }
+}
+
 .container{
     max-width: 1140px;
 }
@@ -62,6 +68,9 @@
         width: 100%;
         z-index: 10;
         display: flex;
+        position: fixed;
+        left: 0;
+        top: 0;
         flex-direction: column;
         justify-content: center;
         align-items: center;
